--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/main-style.css" />
     <link rel="stylesheet" href="styles/responsive.css" />
 
-    <script src="scripts/ui.js" defer></script>
+    <script src="scripts/ui.js" type="module" defer></script>
 </head>
 <body>
     <!-- Html code for the dark mode toggle button -->
