--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                 <div class="hero-buttons">
                     <a class="normal-button" href="dashboard.html">Open Dashboard</a>
-                    <a class="button-outline" href="about.html">Play Video</a>
+                    <a class="button-outline" href="https://youtu.be/kkvXYT6p5ME">Watch Demo</a>
                 </div>
                 </div>
             </div>
