--- a/dashboard.html
+++ b/dashboard.html
@@ -365,7 +365,10 @@
                 </div>
 
                 <!-- Cards (mobile-first) -->
-                <div id="txns-cards" class="txns-cards"></div>
+                <div class="txns-cards">
+                    <div  id="txns-cards"></div>
+                    <button class="btn-primary" onclick="exportTxnsCSV()">Export CSV</button>
+                </div>
 
                 <!-- Table (shown on desktop) -->
                 <div class="txns-table-wrap">
